! a few pm template issues cleared up. missing repot to admin and a couple of broken layouts

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -379,6 +379,7 @@ em {
 	margin: 12px 0 0 0;
 	font-size: 1.143em;
 	line-height: 1.8em;
+	padding: 1px 10px 1px;
 }
 
 .category_header .icon {
